# CMOR438-Spring-2026

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: README.md
notebooks/supervised_learning/: README.md
notebooks/supervised_learning/Decision_Tree/: README.md  decision_tree_example.ipynb
notebooks/supervised_learning/Ensemble_Models/: README.md  ensemble_models_example.ipynb
notebooks/supervised_learning/Gradient_Descent/: README.md  gradient_descent_example.ipynb
notebooks/supervised_learning/KNN/: README.md  knn_ex.ipynb
notebooks/supervised_learning/Linear_Regression/: README.md  linear_regression_example.ipynb
notebooks/supervised_learning/Logistic_Regression/: README.md  logistic_regression.ipynb
notebooks/supervised_learning/Multilayer_Perceptron/: README.md  multilayer_perceptron_example.ipynb
notebooks/supervised_learning/Perceptron/: README.md  perceptron_example.ipynb
notebooks/supervised_learning/Regression_Trees/: README.md  regression_trees_example.ipynb
notebooks/unsupervised_learning/: README.md
src/mlpackage/: README.md  __init__.py
tests/: README.md  __init__.py  test_community_detection.py  test_dbscan.py  test_decision_tree.py  test_distance_metrics.py  test_ensemble_methods.py  test_gradient_descent.py  test_k_means.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_multilayer_perceptron.py  test_pca.py  test_perceptron.py  test_postprocessing.py  test_preprocessing.py  test_regression_trees.py
(+28 files in other folders)
