[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpackage"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E9: syntax errors, F4xx: import issues, F8xx: undefined/unused names
select = ["E9", "F401", "F811", "F821", "F841"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
